# AtlasFlow

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/core/: config.py
api/app/models/: schemas.py
api/app/routes/: admin.py  events.py
api/app/services/: aws_clients.py  events_service.py
infra/: main.tf  outputs.tf  provider.tf  variables.tf
scripts/: create_ddb.sh  smoke.sh
worker/: Dockerfile  pyproject.toml
worker/app/: main.py
worker/app/core/: config.py
worker/app/services/: aws_clients.py  processor.py
